infra/k8s-prod/athletic-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athletic-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: athletic
  template:
    metadata:
      labels:
        app: athletic
    spec:
      containers:
        - name: athletic
          image: mbongeni/athletic
---

apiVersion: v1 
kind: Service
metadata: 
  name: athletic-srv
spec:
  selector:
    app: athletic
  ports:
    - name: athletic
      protocol: TCP
      port: 3000
      targetPort: 3000
